; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/pxa/extr_pxa-ssp.c_pxa_ssp_probe.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/pxa/extr_pxa-ssp.c_pxa_ssp_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.snd_soc_dai = type { %struct.ssp_priv*, i64 }
%struct.ssp_priv = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"SoC audio\00", align 1
@ENODEV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*, %struct.snd_soc_dai*)* @pxa_ssp_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pxa_ssp_probe(%struct.platform_device* %0, %struct.snd_soc_dai* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.platform_device*, align 8
  %5 = alloca %struct.snd_soc_dai*, align 8
  %6 = alloca %struct.ssp_priv*, align 8
  %7 = alloca i32, align 4
  store %struct.platform_device* %0, %struct.platform_device** %4, align 8
  store %struct.snd_soc_dai* %1, %struct.snd_soc_dai** %5, align 8
  %8 = load i32, i32* @GFP_KERNEL, align 4
  %9 = call %struct.ssp_priv* @kzalloc(i32 16, i32 %8)
  store %struct.ssp_priv* %9, %struct.ssp_priv** %6, align 8
  %10 = load %struct.ssp_priv*, %struct.ssp_priv** %6, align 8
  %11 = icmp ne %struct.ssp_priv* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %2
  %13 = load i32, i32* @ENOMEM, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %3, align 4
  br label %42

15:                                               ; preds = %2
  %16 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %5, align 8
  %17 = getelementptr inbounds %struct.snd_soc_dai, %struct.snd_soc_dai* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = add nsw i64 %18, 1
  %20 = call i32* @ssp_request(i64 %19, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %21 = load %struct.ssp_priv*, %struct.ssp_priv** %6, align 8
  %22 = getelementptr inbounds %struct.ssp_priv, %struct.ssp_priv* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  store i32* %20, i32** %23, align 8
  %24 = load %struct.ssp_priv*, %struct.ssp_priv** %6, align 8
  %25 = getelementptr inbounds %struct.ssp_priv, %struct.ssp_priv* %24, i32 0, i32 1
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %32

29:                                               ; preds = %15
  %30 = load i32, i32* @ENODEV, align 4
  %31 = sub nsw i32 0, %30
  store i32 %31, i32* %7, align 4
  br label %38

32:                                               ; preds = %15
  %33 = load %struct.ssp_priv*, %struct.ssp_priv** %6, align 8
  %34 = getelementptr inbounds %struct.ssp_priv, %struct.ssp_priv* %33, i32 0, i32 0
  store i32 -1, i32* %34, align 8
  %35 = load %struct.ssp_priv*, %struct.ssp_priv** %6, align 8
  %36 = load %struct.snd_soc_dai*, %struct.snd_soc_dai** %5, align 8
  %37 = getelementptr inbounds %struct.snd_soc_dai, %struct.snd_soc_dai* %36, i32 0, i32 0
  store %struct.ssp_priv* %35, %struct.ssp_priv** %37, align 8
  store i32 0, i32* %3, align 4
  br label %42

38:                                               ; preds = %29
  %39 = load %struct.ssp_priv*, %struct.ssp_priv** %6, align 8
  %40 = call i32 @kfree(%struct.ssp_priv* %39)
  %41 = load i32, i32* %7, align 4
  store i32 %41, i32* %3, align 4
  br label %42

42:                                               ; preds = %38, %32, %12
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local %struct.ssp_priv* @kzalloc(i32, i32) #1

declare dso_local i32* @ssp_request(i64, i8*) #1

declare dso_local i32 @kfree(%struct.ssp_priv*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
